--- a/ini-qq.cabal
+++ b/ini-qq.cabal
@@ -17,6 +17,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Lib
   build-depends:       base >= 4.7 && < 5
+                     , ini >= 0.3 && < 0.4
+                     , template-haskell >= 2.10
   default-language:    Haskell2010
 
 test-suite ini-qq-test
