--- a/ini-qq.cabal
+++ b/ini-qq.cabal
@@ -19,6 +19,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , ini >= 0.3 && < 0.4
                      , template-haskell >= 2.10
+                     , text
   default-language:    Haskell2010
 
 test-suite ini-qq-test
