--- a/ini-qq.cabal
+++ b/ini-qq.cabal
@@ -27,7 +27,11 @@ test-suite ini-qq-test
   hs-source-dirs:      test
   main-is:             Spec.hs
   build-depends:       base
+                     , HUnit
+                     , ini
                      , ini-qq
+                     , raw-strings-qq
+                     , text
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
